--- a/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
+++ b/ROMFS/px4fmu_common/init.d-posix/airframes/CMakeLists.txt
@@ -40,6 +40,7 @@ px4_add_romfs_files(
 	1013_gazebo-classic_iris_vision
 	1013_gazebo-classic_iris_vision.post
 	1015_gazebo-classic_iris_obs_avoid
+	1816_gazebo-classic_iris_fpv_depth_cam #<-- added
 	1015_gazebo-classic_iris_obs_avoid.post
 	1017_gazebo-classic_iris_opt_flow_mockup
 	1019_gazebo-classic_iris_dual_gps
